# parallel_computing

./: CMakeLists.txt  README.md  gauss_parallel.cpp  gauss_serial.cpp  notes.txt
mpi/: task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task2.cpp  task3.cpp  task4.cpp  task5.1.cpp  task5.2.cpp  task5.3.cpp  task5.cpp  task6.1.cpp  task6.2.cpp  task6.3.cpp  task6.4.cpp  task6.cpp  task7.1.cpp  task7.2.cpp  task7.cpp  task8a.cpp  task8b.cpp  task8c.cpp
omp/: task10.cpp  task11.cpp  task12.1.cpp  task12.2.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp  test.cpp
